# aviateur

./: .gitignore  .gitmodules  80-my8812au.rules  CMakeLists.txt  LICENSE  README.md  build-appimage.sh  copy-gst-dlls.ps1  pack-for-macos.sh  pack-for-windows.ps1  test-local-rtp  wsl-map-usb.md
.github/workflows/: cmake-multi-platform.yml
assets/: translations.csv
src/: gui_interface.h  main.cpp
src/feature/: CMakeLists.txt  video_stabilizer.cpp  video_stabilizer.h
src/gui/: control_panel.cpp  control_panel.h  player_rect.cpp  player_rect.h  settings_tab.cpp  settings_tab.h  tip_label.cpp  tip_label.h
src/player/: CMakeLists.txt  ffmpeg_decoder.cpp  ffmpeg_decoder.h  gst_decoder.cpp  gst_decoder.h  real_time_player.cpp  real_time_player.h  video_player.cpp  video_player.h  yuv_renderer.cpp  yuv_renderer.h
src/player/ffmpeg/: ffmpeg_decoder.cpp  ffmpeg_decoder.h  ffmpeg_include.h  gif_encoder.cpp  jpeg_encoder.cpp  mp4_encoder.h  video_player.cpp  video_player.h
src/player/gst/: gst_decoder.cpp  gst_decoder.h  video_player.cpp  video_player.h
src/shaders/: compile_and_convert.ps1  compile_and_convert.sh  yuv.frag  yuv.vert
src/wifi/: CMakeLists.txt  RxFrame.h  TxFrame.h  WFBReceiver.cpp  WFBReceiver.h  WfbngLink.cpp  rx_frame.h  signal_quality.cpp  signal_quality.h  wfbng_link.cpp  wfbng_link.h
src/wifi/cross/: endian.h  ip.h  udp.h  wfbng_define.h  wfbng_processor.cpp  wfbng_processor.h
src/wifi/linux/: transmitter.cpp  transmitter.h  tx_frame.cpp  tx_frame.h
src/wifi/macos/: endian.h
src/wifi/wfb-ng/: rx.cpp  rx.hpp  wifibroadcast.cpp  wifibroadcast.hpp
src/wifi/windows/: wfbng_define.h
